compiler/testData/diagnostics/tests/classLiteral/unresolvedClass.kt
// FIR_IDENTICAL
konst u = <!UNRESOLVED_REFERENCE!>Unresolved<!>::class
konst g = <!UNRESOLVED_REFERENCE!>UnresolvedGeneric<!><<!UNRESOLVED_REFERENCE!>UnresolvedTypeArg<!>>::class
